# agent-pets

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.jsonc
app/: .gitignore  index.html  package.json  playground.html  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
app/src/: bridge.ts  gallery.ts  main.ts  playground.css  playground.ts  state.test.ts  state.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/core/: Cargo.toml
app/src-tauri/core/src/: lib.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: codex-hooks-official.md  codex-hooks.md  codex-pet-spritesheets.md  concept.md  decisions.md  design-principles.md  frontend-packaging.md  glossary.md  handoff.md  hook-integrations.md  hook-schema-research.md  hook-timing-table.md  navi-architecture.md  navi-roadmap.md  research.md  status-card-design.md
docs/superpowers/plans/: 2026-05-21-hook-integration.md
docs/superpowers/specs/: 2026-05-21-hook-integration-design.md  2026-06-24-navi-ui-redesign-design.md
examples/playground/: gallery.html  package.json  tsconfig.json  vite.config.ts
examples/playground/public/pets/mio/: pet.json
examples/playground/src/: gallery.ts  navi-ui.ts  playground.css  playground.ts  status-card.ts
issues/: 3d107c-rename-to-navi.md  a7f3d2-extract-frontend-ui-package.md  b3f2a1-speech-stack-scroll.md  c4b1e0-extract-navi-ui-components.md  d9a2f7-playground-design-tuning.md  e1f5c3-migrate-shell-to-navi-pet.md  f4a1b2-status-card-close-ux.md
