[package]
name = "agent-pets"
version = "0.1.0"
description = "Desktop companion for agent progress and notifications"
authors = ["Agent Pets Contributors"]
edition = "2021"

[lib]
name = "agent_pets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
