[package]
name = "navi"
version = "0.1.0"
description = "Desktop companion for agent progress and notifications"
authors = ["katya4oyu"]
edition = "2021"
default-run = "navi"

[workspace]
members = ["core"]

[lib]
name = "navi_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "navi-hook"
path = "src/bin/navi_hook.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
agent-pets-core = { path = "core" }
